--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "parcel": "^2.0.0-beta.1"
   },
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html --dist-dir build",
     "build": "parcel build src/index.html --dist-dir docs --public-url ./"
   },
   "browserslist": [
