--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "chartjs-plugin-annotation": "~0.5.7",
     "date-fns": "^2.19.0",
+    "file-saver": "^2.0.5",
     "parcel": "^2.0.0-beta.1"
   },
   "scripts": {
