--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "zenshin",
   "description": "Wanikani progress chart",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.13.14",
     "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
-    "chartjs-plugin-annotation": "~0.5.7",
+    "chart.js": "^3.0.2",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-plugin-annotation": "^1.0.0-rc",
     "date-fns": "^2.19.0",
     "file-saver": "^2.0.5",
-    "parcel": "^2.0.0-beta.1"
+    "parcel": "^2.0.0-beta.2"
   },
   "scripts": {
     "start": "parcel src/index.html --dist-dir build",
